[package]
name = "rvm"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { version = "~7.1" }

[dev-dependencies]
rstest = { version = "0.23.0" }

[lib]
name = "librvm"
path = "src/lib.rs"

[[bin]]
name = "rvmd"
path = "src/rmvd.rs"
test = false
doctest = false
doc = false
bench = false

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.bench]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false
